# popup-mcp

./: ASCII_STYLE_GUIDE.md  CLAUDE.md  CLAUDE_SPIKE_SECTION.md  Cargo.toml  README.md  SPIKE_CLI.md  build.rs  claude_desktop_config.json  d  demo.popup  emoji.popup  example_scenario.md  popup-mcp-dsl-redesign-swarm.yml  popup-wrapper.sh  proposal.md  test_cond.popup  test_errors.sh  test_executive.json  test_mcp.sh
.claude/agents/: mcp-ergonomics-tester.md  pest-grammar-expert.md
cloudflare/: .dev.vars.example  README.md  letta_tool.py  nested_example.json  package-lock.json  package.json  schema.json  test_definition.json  tsconfig.json  vitest.config.ts  worker-configuration.d.ts  wrangler.toml
cloudflare/src/: auth-header.ts  auth.ts  env.d.ts  index.ts  mcp-server-header-auth.ts  mcp-server.ts  popup-session.ts  protocol.ts  test-entry.ts
cloudflare/test/: auth.test.ts  durable-object.test.ts  header-auth.test.ts  helpers.ts  integration.test.ts  mcp-server.test.ts  popup-auth.test.ts  websocket.test.ts
crates/popup-client/: CLAUDE.md  Cargo.toml  README.md  config.toml.example
crates/popup-client/src/: main.rs
crates/popup-common/: CLAUDE.md  Cargo.toml
crates/popup-common/src/: condition.pest  condition.rs  element_deser.rs  element_deser_v2.rs  lib.rs  protocol.rs
crates/popup-common/src/tests/: ergonomic_v2_tests.rs  mod.rs  popup_state_tests.rs
crates/popup-gui/: CLAUDE.md  Cargo.toml
crates/popup-gui/src/: json_parser.rs  lib.rs  main.rs  mcp_server.rs  popup.pest.backup  schema.rs  templates.rs  theme.rs  transform.rs
crates/popup-gui/src/gui/: mod.rs  mod.rs_render_single_element.rs
crates/popup-gui/src/tests/: conditional_filtering_tests.rs  integration_tests.rs  json_parser_tests.rs  mod.rs  template_tests.rs
docs/: README.md  dsl-redesign.md
examples/: adaptive_mediation.popup  all_features.popup  api_performance_demo.json  api_performance_enhanced.json  api_performance_full.json  api_performance_smart.json  audio_mastering.json  choice_demo.json  cloud_infrastructure.json  compact_demo.popup  comprehensive_dsl_demo.popup  conditional_settings.json  conditional_settings.popup  cyberpunk_demo.popup  demo_choice.popup  demo_natural_language.popup  demo_settings.popup  demo_warning.popup  external_tool_integration.rs  feedback_form.json  feedback_form.popup  fog_check.popup  k8s_manifest_interview.json  multiple_popups.rs  new_dsl_examples.popup  philosophical_framework.json  research_methodology.json  rpg_worldbuilding_magitech.json  settings.json  settings.popup  simple.popup  simple_confirm.json  simple_confirm.popup  simple_dsl_demo.popup  state_checkin_v2.json  story_builder.json  system_checkin.popup  system_status.json  system_status.popup  test1_minimal.popup  (+11 more)
proptest-regressions/dsl/: tests.txt
src/: json_parser.rs  lib.rs  main.rs  mcp_server.rs  models.rs  popup.pest  schema.rs  simple.pest  templates.rs  theme.rs  unified.pest
src/dsl/: ast_verification_tests.rs  conditional_grammar_tests.rs  conditional_tests.rs  current_grammar_tests.rs  debug_tests.rs  debug_tests2.rs  edge_case_tests.rs  exact_ast_tests.rs  grammar_debug_tests.rs  mod.rs  mod_with_old_parser.rs  new_grammar_tests.rs  parser_tests.rs  radical_redesign.pest  regression_tests.rs  simple_parser.rs  simple_parser_tests.rs  test_builders.rs  tests.rs  title_removal_tests.rs  unified_integration_test.rs  unified_parser.rs  unified_parser_tests.rs  unified_tests.rs
src/gui/: mod.rs  widget_renderers.rs
src/tests/: conditional_filtering_tests.rs  integration_tests.rs  json_parser_tests.rs  mod.rs  template_tests.rs
tests/: conditional_ast_tests.rs  parser_tests.rs  proptest_roundtrip.proptest-regressions  proptest_roundtrip.rs
