[package]
name = "popup-mcp"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "stdio_direct"
path = "src/bin/stdio_direct.rs"

[[bin]]
name = "spike"
path = "src/bin/spike.rs"

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
eframe = "0.25.0"
egui = "0.25.0"
pest = "2.8.0"
pest_derive = "2.8.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
mcpr = "0.2.3"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
pest = "2.8.0"
pest_derive = "2.8.0"
