[workspace]
members = [
    "crates/popup-common",
    "crates/popup-gui",
    "crates/popup-client",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
authors = ["Inanna Malick <inanna@recursion.wtf>"]

[workspace.dependencies]
# Shared dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "macros"] }

# Workspace crates
popup-common = { path = "crates/popup-common" }
